# carla-to-osm

./: CarlaServer.py  Lane.py  OpenDriveMap.py  Road.py  main.py  map.osm  open_drive_connection.py  pyproject.toml
src/carla_to_osm/: carla_server.py  globe_coord_service.py  lane.py  main.py  osm_map.py  point.py  polygon.py  road.py  way.py
