[project]
name = "carla_to_osm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lxml>=6.1",
    "pyproj>=3.7",
    "numpy>=2.5"
]

[project.optional-dependencies]
carla = [
    "carla>=0.9.16"
]

[project.scripts]
carla_to_osm = "carla_to_osm.main:main"
